# soundhub_api_demo

./: .dockerignore  .gitignore  AWS_APPRUNNER_DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  pyproject.toml  wildlife_soundhub_api_summary.md
api_dock_config/: config.yaml
api_dock_config/databases/birdnet/: 2.4.yaml
api_dock_config/databases/owl/: 0.1.yaml
api_dock_config/remotes/core/: 0.5.0.yaml
api_tests/: endpoints_config.yaml  endpoints_config_direct.yaml  endpoints_tests.py  timing_harness.py
