[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundhub_api"
version = "0.0.1"
readme = "README.md"
dependencies = ["api_dock>=0.4.7"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.tasks]
api_dock = "api-dock"
