[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundhub_api"
version = "0.0.1"
readme = "README.md"
dependencies = ["api_dock>=0.6.1,<0.7.0"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

# [tool.pixi.pypi-dependencies]
# api_dock = { path = "/Users/brookie/code/dse/api_dock/repos/api_dock", editable = true }

[tool.pixi.tasks]
api_dock = "api-dock"

